TAG: refseqload-3-5-4-1
DATE: 01/24/2008
STAFF: sc
CHANGES: TR8743
1) refseqload.config.default - APP_RADAR_MAX=500000000 (was 300MB)
                             - NG=true
2) bin/refseqload.sh - don't attempt to log processed file when
         ${APP_RADAR_INPUT} = false

TAG: refseqload-3-5-1-2
DATE: 11/09/2006
STAFF: sc
CHANGES: refseqload.sh - updated parameters to runQC.csh

TAG: refseqload-3-5-1-1
DATE: 10/24/2006
STAFF: lec
CHANGES: merge tr7894 branch

TAG: refseqload-tr7894-3
TAG: refseqload-tr7894-2
TAG: refseqload-tr7894-1
DATE: 10/16/2006
STAFF: sc
CHANGES: Updated to use mgiconfig

TAG: refseqload-tr7894-BP
DATE: 09/08/2006
STAFF: sc
CHANGES: Branch point tag for TR7894 - use mgiconfig

TAG: refseqload-3-4-1-1
DATE: 01/06/2006
STAFF: sc
CHANGES: TR7302 don't load refseq refs
refseqload.config.default - added SEQ_OK_TO_LOAD_REFS=false 

TAG: refseqload-3-1-0-2
DATE: 01/25/2005
STAFF: sc
CHANGES: TR6473
1) refseqload.sh - added date echo before each call to qc reports
2) refseqload.config.default - added SEQ_QUERY_BATCHSIZE

TAG: refseqload-3-1-0-1
DATE: 12/08/2004
STAFF: sc
CHANGES: TR6265 - merge assembly branch to trunk

TAG: refseqload-1-0-14
DATE: 12/07/2004
STAFF: sc
CHANGES: TR6392 - copied from refseqload-tr6392 branch 
1) refseqload.sh - added ${SEQ_PROVIDER} to call to logProcessedFile.csh

DATE: 11/30/2004
STAFF: sc
CHANGES: refseqload.config.default - added value to INPUTDIR

refseqload-assembly-4
DATE: 11/19/2004
STAFF: sc
CHANGES: tr6336 
1) refseqload.config.default - new common config vars

TAG: refseqload-assembly-3
TAG: refseqload-assembly-2
TAG: refseqload-assembly-1
DATE: 11/17/2004
STAFF: sc
CHANGES:
1) TR6047 - lib_java_dla refactoring

TAG: refseqload-assembly-BP
DATE: 11/17/2004
STAFF: sc
CHANGES: assembly branch point

TAG: refseqload-1-0-13
DATE: 11/01/2004
STAFF: sc
CHANGES:TR5395
1) refseqload.config.default - changed some default values

TAG: refseqload-1-0-12
DATE:10/25/2004
STAFF: sc
CHANGES:TR5395