@@ -1,3 +1,8 @@
+TAG: refseqload-4-1-1-1
+DATE: 07/23/2007
+STAFF: sc
+CHANGES: TR8092 - Removed reference to SeqRefAssocPair
+
 TAG: refseqload-3-5-4-1
 DATE: 01/24/2008
 STAFF: sc
